--- a/docs/faststore/docs/managing-performance/managing-lazy-loading-sections-on-plp.mdx
+++ b/docs/faststore/docs/managing-performance/managing-lazy-loading-sections-on-plp.mdx
@@ -152,7 +152,7 @@ Below are the steps to disable lazy loading for a custom section. In this exampl
 To make sure that the custom section is present in the initial HTML response, follow these steps:
 
 1. In the browser, right-click anywhere on the page and select **Inspect** from the context menu.
-2. In the **Developer Tools** panel, click on the **Network tab**. Ensure that the **All filter** is selected.
+2. In the **Developer Tools** panel, click the **Network tab**. Ensure that the **All filter** is selected.
 
   > ℹ To focus only on the main HTML document, you can filter by **Doc** in the filter bar. This will show only the initial HTML request, making it easier to inspect the page's source code.
 
