Add a callout about the feature's impacts

--- a/docs/faststore/docs/managing-performance/managing-lazy-loading-sections-on-plp.mdx
+++ b/docs/faststore/docs/managing-performance/managing-lazy-loading-sections-on-plp.mdx
@@ -8,6 +8,8 @@ While lazy loading improves performance, it can harm SEO. Search engine crawlers
 
 In this guide, learn how to optimize SEO by controlling lazy loading for sections in FastStore.
 
+> ⚠ This feature may increase initial page load times, potentially impacting performance and user experience. Use it only when necessary.
+
 ## Before you begin
 
 Make sure the `@faststore/cli` package is updated to the latest version. If you need to update it, follow the instructions on [Updating the '@fastore/cli' package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
