--- a/docs/faststore/docs/headless-cms/3-adding-content-types-and-sections.mdx
+++ b/docs/faststore/docs/headless-cms/3-adding-content-types-and-sections.mdx
@@ -131,7 +131,7 @@ While it is visible and configurable in the Headless CMS, it does not appear on 
 
 ![childre-section](https://vtexhelp.vtexassets.com/assets/docs/src/children-section___1c3e8b7d72e66c28eb59a3d9c0bafe10.png)
 
-#### The **`schema`** property
+#### The `schema` property
 
 The `schema` will always be unique for each of your Sections as they create the form that editors will use to submit data and change the content of a given React component.
 
