fix(sdk-overview.mdx): Inpecting browser data command

--- a/docs/faststore/docs/sdk/overview.mdx
+++ b/docs/faststore/docs/sdk/overview.mdx
@@ -116,4 +116,4 @@ You can inspect browser data related to the session and shopping cart managed by
 3. Open the browser's developer console and run the following commands:
 
    - To view session data: `faststore_sdk_stores.get("fs::session").read()`.
-   - To view shopping cart data: `faststore_sdk_stores.get("fs::session").read()`.
+   - To view shopping cart data: `faststore_sdk_stores.get("fs::cart").read()`.
