--- a/docs/faststore/docs/getting-started/1-onboarding/starting-the-project.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/starting-the-project.mdx
@@ -8,6 +8,8 @@ Now that you have an [overview of the app](https://developers.vtex.com/docs/guid
     - Configure a GitHub repository for your project.
     - Generate a live preview of your store.
 
+>⚠ To start a FastStore project, users must have the Owner (Admin Super) role.
+
 ---
 
 ## Instructions
