Add <Steps> tag to 'Before you begin'

--- a/docs/faststore/docs/managing-performance/optimizing-seo-by-lazy-loading-sections-on-plp.mdx
+++ b/docs/faststore/docs/managing-performance/optimizing-seo-by-lazy-loading-sections-on-plp.mdx
@@ -12,7 +12,17 @@ In this guide, learn how to optimize SEO by controlling lazy loading for section
 
 ## Before you begin
 
+<Steps>
+
+### Update the `@faststore/cli` package
+
 Make sure the `@faststore/cli` package is updated to the latest version. If you need to update it, follow the instructions on [Updating the '@fastore/cli' package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
+
+### 
+
+</Steps>
+
+
 
 ## SEO metadata for PLPs
 
