--- a/docs/faststore/docs/managing-performance/optimizing-seo-by-managing-lazy-loading-on-plp.mdx
+++ b/docs/faststore/docs/managing-performance/optimizing-seo-by-managing-lazy-loading-on-plp.mdx
@@ -18,10 +18,10 @@ In this guide, learn how to optimize SEO by controlling lazy loading for section
 
 Make sure the `@faststore/cli` package is updated to the latest version. If you need to update it, follow the instructions on [Updating the '@fastore/cli' package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
 
-### Configure SEO for Product Listing Pages (PLP)
+### Configure SEO for PLPs
 
 Set up title and description templates in the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file to dynamically generate metadata for PLPs, such as collections, categories, subcategories, or brands. 
-For instructions, see the [Configuring SEO for Product Listing Pages (PLP)](/) guide.
+For instructions, see the [Configuring SEO for Product Listing Pages (PLP)](https://developers.vtex.com/docs/guides/faststore/configuring-seo-for-plp) guide.
 
 </Steps>
 
