--- a/docs/faststore/docs/managing-performance/configuring-seo-for-plp.mdx
+++ b/docs/faststore/docs/managing-performance/configuring-seo-for-plp.mdx
@@ -25,4 +25,4 @@ Set up SEO settings for Product Listing Pages (PLPs) to customize title and desc
 
 ## Lazy Loading and SEO Considerations
 
-FastStore uses lazy loading to improve performance, but this can impact SEO as search engine crawlers may not index dynamically loaded content. If you need to optimize SEO for PLPs, see the [Optimizing SEO by managing Lazy Loading on Product Listing Pages (PLPs)](https://developers.vtex.com/docs/guides/faststore/optimizing-seo-by-managing-lazy-loading-sections-on-plp) guide.
+FastStore uses lazy loading to improve performance. However, certain [custom sections](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section), such as those containing H1 headers, may need to appear in the initial HTML for SEO purposes, as search engine crawlers may not index dynamically loaded content. To optimize SEO for PLPs, see the [Optimizing SEO by managing Lazy Loading on Product Listing Pages (PLPs)](https://developers.vtex.com/docs/guides/faststore/optimizing-seo-by-managing-lazy-loading-sections-on-plp) guide.
