--- a/docs/faststore/docs/managing-performance/configuring-seo-for-plp.mdx
+++ b/docs/faststore/docs/managing-performance/configuring-seo-for-plp.mdx
@@ -18,10 +18,10 @@ Set up SEO settings for Product Listing Pages (PLPs) to customize title and desc
 
   ```
 
-  > ⚠ Change the values in `titleTemplate` and `descriptionTemplate` according to your needs. Use %s as a placeholder for the PLP title/name.
+  > ⚠ Change the values in `titleTemplate` and `descriptionTemplate` according to your needs. Use `%s` as a placeholder for the PLP title/name.
 
-  - Title template: This template will be applied to all PLPs, including collections, categories, subcategories, and brands.
-  - Description template: This template is used for `collections`, as descriptions for `collections` are not configured in the Catalog. If a specific description isn't configured in the Catalog for a category, subcategory, or brand, this template will be used as a fallback.
+  - **Title template:** This template will be applied to all PLPs, including collections, categories, subcategories, and brands.
+  - **Description template:** This template is used for `collections`, as descriptions for `collections` are not configured in the Catalog. If a specific description isn't configured in the Catalog for a category, subcategory, or brand, this template will be used as a fallback.
 
 ## Lazy Loading and SEO Considerations
 
