--- a/docs/faststore/docs/getting-started/overview.mdx
+++ b/docs/faststore/docs/getting-started/overview.mdx
@@ -15,8 +15,8 @@ In this Getting Started track, you will build and deploy a FastStore storefront 
     linkTitle="See more"
   />
   <WhatsNextCard
-    title="1. FastStore Onboarding app"
-    description="Start your project with the FastStore Onboarding app. It sets up store settings, creates a GitHub repository, and defines a default domain, streamlining your store setup."
+    title="1. FastStore WebOps"
+    description="Start your project with the FastStore WebOps app. It sets up store settings, creates a GitHub repository, and defines a default domain, streamlining your store setup."
     linkTo="https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview"
     linkTitle="See more"
   />
