--- a/docs/faststore/docs/managing-performance/configuring-seo-for-plp.mdx
+++ b/docs/faststore/docs/managing-performance/configuring-seo-for-plp.mdx
@@ -2,7 +2,8 @@
 title: "Configuring SEO for Product Listing Pages (PLPs)"
 ---
 
-Set up SEO settings for Product Listing Pages (PLPs) to customize title and description templates. This ensures your PLPs align with your brand and improve discoverability. Follow these steps to configure SEO for PLPs:
+Configuring SEO settings for Product Listing Pages (PLPs) is essential for improving search engine visibility and discoverability. This guide walks you through setting up title and description templates for PLPs and provides best practices for optimizing SEO performance.
+## Instrucctions
 
 1. Open your FastStore project in a code editor of your preference.
 2. Go to the `discovey.config.js` file and in the `seo` section add the following:
@@ -22,6 +23,6 @@ Set up SEO settings for Product Listing Pages (PLPs) to customize title and desc
   - **Title template:** This template will be applied to all PLPs, including collections, categories, subcategories, and brands.
   - **Description template:** This template is used for `collections`, as descriptions for `collections` are not configured in the Catalog. If a specific description isn't configured in the Catalog for a category, subcategory, or brand, this template will be used as a fallback.
 
-## Lazy Loading and SEO Considerations
+## Lazy loading and SEO considerations
 
 FastStore uses lazy loading to improve performance. However, certain [custom sections](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section), such as those containing H1 headers, may need to appear in the initial HTML for SEO purposes, as search engine crawlers may not index dynamically loaded content. To optimize SEO for PLPs, see the [Optimizing SEO by managing Lazy Loading on Product Listing Pages (PLPs)](https://developers.vtex.com/docs/guides/faststore/managing-performance-optimizing-seo-by-managing-lazy-loading-on-plp) guide.
