--- a/docs/faststore/docs/managing-performance/configuring-seo-for-plp.mdx
+++ b/docs/faststore/docs/managing-performance/configuring-seo-for-plp.mdx
@@ -6,7 +6,7 @@ Configuring SEO settings for Product Listing Pages (PLPs) is essential for impro
 
 ## SEO metadata for PLPs
 
-FastStore follows a structured approach to generating SEO metadata for PLPs, prioritizing available catalog data before falling back to predefined templates in `discovery.config.js`.
+FastStore follows a structured approach to generating SEO metadata for PLPs, prioritizing available catalog data before falling back to predefined templates in [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file.
 
 <details>
 <summary>Title</summary>
@@ -58,7 +58,7 @@ G --> H;
 
 </details>
 
-## Instrucctions
+## Instructions
 
 1. Open your FastStore project in a code editor of your preference.
 2. Go to the `discovey.config.js` file and in the `seo` section add the following:
