adding permission information to start a project

--- a/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
@@ -46,4 +46,4 @@ To access the app, go to the VTEX Admin and navigate to **Storefront > FastStore
 | FastStore Documentation | Opens the FastStore Portal Documentation.                                                                                                                                                                                               |
 | View Live Demo          | Opens a live demo store.                                                                                                                                                                                                                |
 | Before you start        | Opens a sidebar with FAQs about starting the project. Note that you have the option to create a catalog for your store if you haven't already. By clicking on `Create Catalog`, you will be taken to the Catalog section in the Admin.  |
-| Start Project           | Initiates the setup process for creating a new FastStore project.                                                                                                                                                                       |
+| Start Project           | Initiates the setup process for creating a new FastStore project. **Users must have the Owner (Admin Super) [role](https://help.vtex.com/en/tutorial/roles--7HKK5Uau2H6wxE1rH5oRbc#roles) to be able to successfully start a new FastStore project**. |
