--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -40,13 +40,13 @@ If yes, proceed to check the [next requirement](https://developers.vtex.com/docs
 
     ![installation-message](https://vtexhelp.vtexassets.com/assets/docs/src/cms-install___7144afabf5a895ba92905926808507b2.png)
 
-5. Install Headless CMS dependencies by running the following command:
+5. Install the following Headless CMS dependency by running the following command:
 
     ```bash
     vtex install vtex.admin-cms-graphql-rc
     ```
 
-Once the app and its dependencies are installed, proceed to check the [next requirement](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-headless-cms-plugins).
+Once the app and its dependency are installed, proceed to check the [next requirement](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-headless-cms-plugins).
 
 ## Install Headless CMS plugins
 
