--- a/docs/faststore/docs/headless-cms/overview.mdx
+++ b/docs/faststore/docs/headless-cms/overview.mdx
@@ -61,9 +61,9 @@ Once editors click **Create Document** in the Headless CMS interface, they'll be
 
 ![CMS Settings](https://vtexhelp.vtexassets.com/assets/docs/src/headless-cms-projects___5472a0870899c945ece289905ac92758.png)
 
-Content Types are the building blocks for creating a scalable and maintainable storefront in FastStore. After onboarding via the [FastStore WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) app, these Content Types are pre-implemented in your starter store, enabling you to quickly build pages like the Home, Product Listing, and Custom Landing.
+Content Types are the building blocks for creating a scalable and maintainable storefront in FastStore. Predefined Content Types are available after onboarding through [FastStore WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview), enabling quick setup for pages like Home, Product Listing, and Custom Landing.
 
-Content Types are organized by [Scopes](https://developers.vtex.com/docs/guides/faststore/headless-cms-managing-content-with-scopes-and-requiredscopes#scopes), which define the context in which each Content Type can be used. They categorize Content Types based on their functionality. For example, a Content Type with a `pdp` scope can only be used on PDPs.
+Content Types are categorized by [Scopes](https://developers.vtex.com/docs/guides/faststore/headless-cms-managing-content-with-scopes-and-requiredscopes#scopes), which define the context where they can be used. For example, a Content Type with a `pdp` scope can only be used on PDPs.
 
 The following table provides an overview of the standard Content Types, their IDs, scopes, and their respective purposes.
 
@@ -85,11 +85,11 @@ The following table provides an overview of the standard Content Types, their ID
 
 ### Sections
 
-For each Content Type, different sections will be available to build a page. Sections define the content structure of a React component, such as the [Alert](https://developers.vtex.com/docs/guides/faststore/molecules-alert).
+Each Content Type has different Sections available to build a page. Sections represent key React components, such as Hero or Product Gallery, manageable within the CMS. Editors can visually configure and arrange storefront Sections without needing to code. For example, the [Alert component](https://developers.vtex.com/docs/guides/faststore/molecules-alert) is a FastStore UI component and Section that can be used in various Content Types.
 
 ![CMS Section](https://vtexhelp.vtexassets.com/assets/docs/src/cms-sections___ccc8b00d73f222d249a009eb195c8e0c.png)
 
-Sections can be reused on different pages of an ecommerce. You have the flexibility to choose which sections will be available at the CMS. Check the following example of the [Hero Section](https://developers.vtex.com/docs/guides/faststore/organisms-hero) being used:
+Sections are reusable across different pages. Developers determine which sections are available in the CMS. Below is an example of the [Hero Section](https://developers.vtex.com/docs/guides/faststore/organisms-hero):
 
 ![Hero Section](https://vtexhelp.vtexassets.com/assets/docs/src/headless-example-hero___7cbbc99654d6607f50c013053b1348ca.png)
 
@@ -99,7 +99,7 @@ The Children section is a special section used to organize and structure content
 
 ![childre-section](https://vtexhelp.vtexassets.com/assets/docs/src/children-section___1c3e8b7d72e66c28eb59a3d9c0bafe10.png)
 
-> ⚠ The Children Section cannot be deleted. Removing it would result in the deletion of your store page's main content.
+> ❗ The Children section cannot be deleted. Removing it would erase the main content of your store page.
 
 The Children Section ensures that headers and footers (defined in Global Sections) are clearly separated from the main content of each page. For example, on a Product Listing Page (PLP), the Children Section might include the following sections: Breadcrumb, Hero, Product Gallery, and Product Shelf. These sections are wrapped within the Children Section.
 
@@ -109,6 +109,6 @@ In summary:
 
 - Headers and Footers are defined in the Global Sections Content Type and appear on all store pages.
 
-- The main content of a page is wrapped by the Children Section. For the PLP example, the Children wraps the Breadcrumb, Hero, Product Gallery, and Product Shelf sections.
+- The Children section wraps the main content of a page, ensuring clear separation from headers and footers.
 
 ![children-store-plp](https://vtexhelp.vtexassets.com/assets/docs/src/children-section-store___c21eb36deeea20fcedeea495b9066218.png)
