--- a/docs/faststore/docs/headless-cms/overview.mdx
+++ b/docs/faststore/docs/headless-cms/overview.mdx
@@ -95,13 +95,13 @@ Sections are reusable across different pages. Developers determine which section
 
 #### The Children section
 
-The Children section is a special section used to organize and structure content within the Headless CMS interface. It is a global section, meaning it appears on all store pages and represents the core content of each page. This section is only available for the Global Sections Content Type.
+The Children section is a special section used to organize and structure content within the Headless CMS interface. It is a Global Section, meaning it appears on all store pages and represents the core content of each page. This section is only available for the Global Sections Content Type.
 
 ![childre-section](https://vtexhelp.vtexassets.com/assets/docs/src/children-section___1c3e8b7d72e66c28eb59a3d9c0bafe10.png)
 
 > ❗ The Children section cannot be deleted. Removing it would erase the main content of your store page.
 
-The Children Section ensures that headers and footers (defined in Global Sections) are clearly separated from the main content of each page. For example, on a Product Listing Page (PLP), the Children Section might include the following sections: Breadcrumb, Hero, Product Gallery, and Product Shelf. These sections are wrapped within the Children Section.
+The Children Section ensures that headers and footers (defined in Global Sections) are clearly separated from the main content of each page. For example, on a Product Listing Page (PLP), the Children section might include the following sections: Breadcrumb, Hero, Product Gallery, and Product Shelf. These sections are wrapped within the Children section.
 
 ![children-plp-cms](https://vtexhelp.vtexassets.com/assets/docs/src/children-section-cms___33640231fc80e521504c130aa6def7cc.png)
 
