--- a/docs/faststore/docs/managing-performance/optimizing-seo-by-managing-lazy-loading-on-plp.mdx
+++ b/docs/faststore/docs/managing-performance/optimizing-seo-by-managing-lazy-loading-on-plp.mdx
@@ -34,7 +34,7 @@ FastStore lazy-loads sections for performance reasons. However, certain [custom 
 1. Open the `cms/faststore/sections.json` file in your project.
 2. Locate your custom section in the file and add the `skipLazyLoadingSection` property, and set it to `true`. For example, if your custom section is named `CustomPLPName`, the configuration would look like this:
 
-   ```sections.json
+   ```json
    ...
    {
      "name": "CustomPLPName",
@@ -56,7 +56,7 @@ FastStore lazy-loads sections for performance reasons. However, certain [custom 
 
 3. To display data related to the PLP (e.g., collection, category, or brand names) in a custom section, use the [`usePLP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#consuming-api-extensions-data-from-custom-sections) hook in the section’s file:
 
-    ```CallToAction.tsx
+    ```tsx
     import { usePLP } from '@faststore/core'
 
     export default function CustomPLPName() {
