--- a/docs/faststore/docs/customization/dynamic-content/step-1-setting-up-the-store-code-for-dynamic-content.mdx
+++ b/docs/faststore/docs/customization/dynamic-content/step-1-setting-up-the-store-code-for-dynamic-content.mdx
@@ -80,7 +80,7 @@ After [mapping pages and data-fetching functions](#1-mapping-pages-and-data-fetc
 4. Inside `typeDefs` create the `extra.graphql` file.
 5. Add the following code:
 
-   ```extra.graphql
+   ```graphql src/graphql/thirdParty/typeDefs/extra.graphql
    type Rating {
      rate: String
      count: Int
@@ -129,7 +129,7 @@ After [mapping pages and data-fetching functions](#1-mapping-pages-and-data-fetc
 6. Create a file called `query.ts` inside the' resolvers' folder.
 7. Add the following code to it:
 
-   ```query.ts
+   ```ts src/graphql/thirdParty/resolvers/query.ts
 
    export type ProductsExtraData = {
    id: number;
@@ -167,7 +167,7 @@ After [mapping pages and data-fetching functions](#1-mapping-pages-and-data-fetc
 8. Create a file called `extra.ts` inside the' resolvers' folder.
 9. Add the following code to it:
 
-   ```extra.ts
+   ```ts src/graphql/thirdParty/resolvers/extra.ts
    import { ExtraDataRoot } from "./query";
 
    export const ExtraData = {
@@ -187,7 +187,7 @@ After [mapping pages and data-fetching functions](#1-mapping-pages-and-data-fetc
 
 10. Inside the `resolvers` folder, create a file called `index.ts` and add the following code:
 
-    ```index.ts
+    ```ts src/graphql/thirdParty/resolvers/index.ts
     import { ExtraData } from "./extraData";
     import { Query } from "./query";
 
@@ -201,7 +201,7 @@ After [mapping pages and data-fetching functions](#1-mapping-pages-and-data-fetc
 
 11. Combine your resolvers and queries into the store's dynamic content in the `index.tsx` file inside the `dynamicContent` folder.
 
-    ```index.ts mark=1:33
+    ```tsx mark=1:33 src/dynamicContent/index.tsx
     import { gql } from "@faststore/core/api";
     import { execute_unstable as execute } from "@faststore/core/experimental";
 
@@ -266,8 +266,7 @@ You can render this data in your store sections once you've set up your dynamic 
 
 You can use [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) to directly fetch data from an endpoint.
 
-```src/dynamicContent/index.ts
-
+```ts src/dynamicContent/index.ts
 async function fetchDataMyLandingPage() {
 const response = await fetch("https://fakestoreapi.com/products");
 const data = await response.json();
@@ -290,7 +289,7 @@ export default dynamicContent;
 
 Use `Promise.all` to fetch data from multiple endpoints concurrently.
 
-```src/dynamicContent/index.ts
+```ts src/dynamicContent/index.ts
 async function fetchDataHomepage() {
 try {
     const [apiData1, apiData2] = await Promise.all([
