--- a/docs/faststore/docs/customization/dynamic-content/step-1-setting-up-the-store-code-for-dynamic-content.mdx
+++ b/docs/faststore/docs/customization/dynamic-content/step-1-setting-up-the-store-code-for-dynamic-content.mdx
@@ -182,7 +182,7 @@ After [mapping pages and data-fetching functions](#1-mapping-pages-and-data-fetc
   };
   ```
 
-   - The `Query` function returns the API data in the field `extraData` through a request on an external API.
+     - The `Query` function returns the API data in the field `extraData` through a request on an external API.
 
 10. Inside the `resolvers` folder, create a file called `index.ts` and add the following code:
 
@@ -281,7 +281,7 @@ export default dynamicContent;
 ```
 
 - `fetchDataMyLandingPage`:
-  - Fetches data from https://fakestoreapi.com/products.
+  - Fetches data from `https://fakestoreapi.com/products`.
   - Returns the fetched data as an object with a data key.
 
 #### Multiple Requests Example
