--- a/docs/faststore/docs/customization/building-sections/experimental-exports-hooks-and-components.mdx
+++ b/docs/faststore/docs/customization/building-sections/experimental-exports-hooks-and-components.mdx
@@ -8,7 +8,7 @@ For example, you can create a custom [BuyButton](https://developers.vtex.com/doc
 
 ## Before you begin
 
-All experimental [hooks and components](#list-of-hooks-and-components) are suffixed with `_unstable`, indicating that they are subject to change and may not be stable for use in production.
+All experimental [hooks and components](#list-of-hooks-and-components) are suffixed with `_unstable`, indicating they are available for use but may not function as expected or could have limitations with certain store customizations. Before deploying them in a production environment, make sure to test them to confirm compatibility with your store.
 
 ## Instructions
 
