Fix support link

--- a/docs/faststore/docs/getting-started/faststore-versions-and-support-levels.mdx
+++ b/docs/faststore/docs/getting-started/faststore-versions-and-support-levels.mdx
@@ -57,8 +57,8 @@ Different levels of support are available depending on the FastStore version. Th
 | **Support** | Limited support. Only bugs and vulnerabilities related to public VTEX APIs are addressed. | Full support. |
 | **New Projects** | Not supported. Only FastStore v2+ is available for new projects. | Recommended for all new storefront implementations. |
 
-If you have any questions about the level of support provided for different FastStore versions, [open a ticket](https://support.vtex.com/hc/pt-br/requests) with the VTEX Support team.
+If you have any questions about the level of support provided for different FastStore versions, [open a ticket](https://help.vtex.com/en/support) with the VTEX Support team.
 
 ## Upgrade between FastStore versions
 
-Before upgrading to a new FastStore version, consult VTEX to ensure compatibility and a smooth transition. For assistance, [open a ticket](https://support.vtex.com/hc/pt-br/requests) with the VTEX Support team.
+Before upgrading to a new FastStore version, consult VTEX to ensure compatibility and a smooth transition. For assistance, [open a ticket](https://help.vtex.com/en/support) with the VTEX Support team.
