Update 'Getting start' card

--- a/docs/faststore/docs/getting-started/overview.mdx
+++ b/docs/faststore/docs/getting-started/overview.mdx
@@ -9,7 +9,13 @@ In this Getting Started track, you will build and deploy a FastStore storefront 
 
 <Flex>
   <WhatsNextCard
-    title="0. Requirements"
+    title="FastStore versions and support levels"
+    description="Understand the key differences between FastStore versions, their support levels, and guidelines for upgrading."
+    linkTo="https://developers.vtex.com/docs/guides/faststore/getting-started-faststore-versions-and-support-levels"
+    linkTitle="See more"
+  />
+  <WhatsNextCard
+    title="Requirements"
     description="Ensure that you have met all the necessary requirements before beginning your FastStore project."
     linkTo="https://developers.vtex.com/docs/guides/faststore/getting-started-requirements"
     linkTitle="See more"
