Add 'SearchProvider' links

--- a/docs/faststore/docs/sdk/search/overview.mdx
+++ b/docs/faststore/docs/sdk/search/overview.mdx
@@ -36,7 +36,7 @@ The `SearchProvider` also provides functions to change the facet state:
 - `toggleFacet`: Replaces a selected facet with its key.
 - `removeFacet`: Removes the selected facet with its value.
 
-For more information about this component, see the guide [`SearchProvider`](/TBD).
+For more information about this component, see the guide [`SearchProvider`](https://developers.vtex.com/docs/guides/faststore/search-search-provider).
 
 ## `serializer`
 
