--- a/docs/faststore/docs/sdk/search/use-search.mdx
+++ b/docs/faststore/docs/sdk/search/use-search.mdx
@@ -2,7 +2,7 @@
 title: "useSearch"
 ---
 
-The `useSearch` hook provides access to the search context managed by the `SearchProvider` component. It enables reading and modifying the search state, such as sorting criteria, selected facets, and pagination. Use this hook to build interactive search features like sorting dropdowns, facet filters, and pagination controls.
+The `useSearch` hook provides access to the search context managed by the [`SearchProvider`](https://developers.vtex.com/docs/guides/faststore/search-search-provider) component. It enables reading and modifying the search state, such as sorting criteria, selected facets, and pagination. Use this hook to build interactive search features like sorting dropdowns, facet filters, and pagination controls.
 
 ## Import
 
