--- a/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Optimizing SEO by managing lazy loading on Product Listing Pages (PLPs)"
+title: "Optimizing SEO by managing lazy loading on PLPs and PDPs"
 ---
 
 By default, FastStore improves performance by wrapping store sections in `LazyLoadingSection` and `ViewportObserver` components. These components delay loading non-essential sections until needed, such as when a user scrolls near them. This approach reduces initial page load times and improves user experience, particularly on slower networks or devices.
@@ -21,7 +21,7 @@ Make sure the `@faststore/cli` package is updated to the latest version. If you 
 ### Configure SEO for PLPs
 
 Set up title and description templates in the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file to dynamically generate metadata for PLPs, such as collections, categories, subcategories, or brands.
-For instructions, see the [Configuring SEO for Product Listing Pages (PLP)](https://developers.vtex.com/docs/guides/faststore/managing-performance-configuring-seo-for-plp) guide.
+For instructions, see the [Configuring SEO for PLPs and PDPs](https://developers.vtex.com/docs/guides/faststore/seo-configuring-seo-for-plp-and-plp) guide.
 
 </Steps>
 
